--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
   schedule:
     # Execute CI at every 5th minute
-    - cron: '0 0 0/1 1/1 * ? *'
+    - cron: '0 * * * *'
 
 jobs:
   build:
