--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,5 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add oldAnnouncements.json
-        git diff-index --quiet HEAD || git commit -m "Add [skip-ci]"
+        git diff-index --quiet HEAD || git commit -m "Auto update announcements [skip-ci]"
         git push
